[project]
name = "heleus"
version = "0.1.0"
description = "A CLI tool for managing APK versions"
authors = [
    {name = "Gagan Malvi", email = "gagan.malvi@eulermotors.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "tqdm>=4.65.0"
]

[tool.poetry]
name = "heleus"
version = "0.1.0"
description = "A CLI tool for managing APK versions"
authors = ["Heleus Team"]
license = "MIT"
readme = "README.md"
packages = [{include = "heleus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8"
requests = "^2.31.0"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
heleus = "heleus.cli:main"
